[package]
name = "deno_config"
description = "Config file implementation for the Deno CLI"
version = "0.17.0"
edition = "2021"
authors = ["the Deno authors"]
license = "MIT"
repository = "https://github.com/denoland/deno_config"

[features]
default = ["workspace"]
deno_json = ["jsonc-parser", "glob", "import_map"]
package_json = ["deno_semver"]
sync = []
workspace = ["deno_json", "package_json"]

[dependencies]
anyhow = "1.0.57"
indexmap = { version = "2", features = ["serde"] }
jsonc-parser = { version = "0.23.0", features = ["serde"], optional = true }
log = "0.4.20"
glob = { version = "0.3.1", optional = true }
percent-encoding = "2.3.0"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.85"
url = { version = "2.3.1" }
import_map = { version = "0.20.0", features = ["ext"], optional = true }
thiserror = "1.0.61"
deno_semver = { version = "0.5.6", optional = true }

[dev-dependencies]
tempfile = "3.4.0"
pretty_assertions = "1.4.0"
tokio = { version = "1.10.1", features = ["macros", "rt-multi-thread"] }
