[package]
name = "deno_config"
description = "Config file implementation for the Deno CLI"
version = "0.35.0"
edition = "2021"
authors = ["the Deno authors"]
license = "MIT"
repository = "https://github.com/denoland/deno_config"

[features]
default = ["workspace"]
deno_json = ["jsonc-parser", "glob", "ignore", "import_map", "phf"]
package_json = ["deno_package_json"]
sync = ["deno_package_json/sync"]
workspace = ["deno_json", "deno_semver", "package_json"]

[dependencies]
anyhow = "1.0.57"
indexmap = { version = "2", features = ["serde"] }
jsonc-parser = { version = "0.23.0", features = ["serde"], optional = true }
log = "0.4.20"
glob = { version = "0.3.1", optional = true }
ignore = { version = "0.4", optional = true }
percent-encoding = "2.3.0"
phf = { version = "0.11", features = ["macros"], optional = true }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.85"
url = { version = "2.3.1" }
import_map = { version = "0.20.0", features = ["ext"], optional = true }
thiserror = "1.0.61"
deno_semver = { version = "0.5.8", optional = true }
deno_package_json = { version = "0.1.2", optional = true }

[dev-dependencies]
tempfile = "3.4.0"
pretty_assertions = "1.4.0"
