[package]
name = "deno_config"
description = "Config file implementation for the Deno CLI"
version = "0.51.0"
edition = "2021"
authors = ["the Deno authors"]
license = "MIT"
repository = "https://github.com/denoland/deno_config"

[workspace]
members = ["."]

[workspace.dependencies]
sys_traits = "0.1.8"

[features]
default = ["workspace"]
deno_json = ["jsonc-parser", "glob", "ignore", "import_map", "phf"]
package_json = ["deno_package_json"]
sync = ["deno_package_json/sync"]
workspace = ["deno_json", "deno_semver", "package_json"]

[dependencies]
capacity_builder = { version = "0.5.0" }
indexmap = { version = "2", features = ["serde"] }
jsonc-parser = { version = "0.26.0", features = ["serde"], optional = true }
log = "0.4.20"
glob = { version = "0.3.1", optional = true }
ignore = { version = "0.4", optional = true }
percent-encoding = "2.3.0"
phf = { version = "0.11", features = ["macros"], optional = true }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.85"
url = { version = "2.3.1" }
import_map = { version = "0.21.0", features = ["ext"], optional = true }
thiserror = "2"
deno_error = { version = "0.5.3", features = ["url"] }
boxed_error = "0.2.3"
deno_semver = { version = "0.7.1", optional = true }
deno_package_json = { version = "0.6.0", optional = true }
deno_path_util = "0.3.0"
sys_traits.workspace = true

[dev-dependencies]
tempfile = "3.4.0"
pretty_assertions = "1.4.0"
sys_traits = { workspace = true, features = ["memory", "real", "serde_json"] }
